[package]
name = "rhai"
version = "0.9.1"
edition = "2018"
authors = ["Jonathan Turner", "Lukáš Hozda"]
description = "Embedded scripting for Rust"
homepage = "https://github.com/jonathandturner/rhai"
repository = "https://github.com/jonathandturner/rhai"
readme = "README.md"
license = "MIT/Apache-2.0"
include = [
    "**/*.rs",
    "scripts/*.rhai",
    "Cargo.toml"
]

[dependencies]
hashbrown = "0.7"
smallvec = "1.2"
smallbox = { version = "0.8", features = ["coerce"] }

[features]
debug_msgs = []

[dev-dependencies]
rhai_old = { git = "https://github.com/jonathandturner/rhai.git", package = "rhai" }
